--- a/Server/monitor/templates/monitor/client_detail.html
+++ b/Server/monitor/templates/monitor/client_detail.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Скриншот клиентА покаа {{ client }}</h1>
+<h1>Скриншот экрана клиента {{ client }}</h1>
 <p><strong>Последняя активность:</strong> {{ client.last_active }}</p>
 {% if client.screenshot %}
   <img src="{{ client.screenshot.url }}" alt="Screenshot" style="max-width:100%;"/>
 {% else %}
-  <p>Скриншот не доступен.</p>
+  <p>Скриншот недоступен.</p>
 {% endif %}
-<p><a href="{% url 'client-list' %}">← Назад к списку</a></p>
+<p><a class="btn" href="{% url 'client-list' %}">← Назад к списку</a></p>
 {% endblock %}
